<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Carteggio</string>
    <string name="action_settings">Settings</string>
    <string name="action_new_conversation">New conversation</string>
    <string name="action_new_attachment">New attachment</string>
    <string name="action_search">Search</string>
    <string name="action_add_contact">Add contact</string>
    <string name="action_report_problem">Report problem</string>
    <string name="action_about">About</string>
    <string name="action_network_status">Network status</string>
    <string name="action_new_group">Add group</string>
    
    
    <string name="title_network_status">Network status</string>
    <string name="title_about">About</string>
    
    <string name="crash_dialog_text">There was a unexpected problem in Carteggio. Would you like to report this to the developers?</string>
    <string name="crash_toast_text">Ooooops ! Carteggio crashed, collecting information about the crash...</string>
    
    <string name="no_email_client">No email client configured. Impossible to send report.</string>
    <string name="contacts">Contacts</string>
    <string name="pref_summary_email">The email address from which your messages are sent</string>
    <string name="pref_title_email">E-Mail Address</string>
    <string name="account_preferences_title">Account preferences</string>
    <string name="account_properties_title">Account properties</string>
    <string name="account_properties_summary">Change account properties</string>
    <string name="display_name">Display Name</string>
    <string name="email_address">Email Address</string>
    <string name="incoming_server">Incoming Server</string>
    <string name="outgoing_server">Outgoing Server</string>
    <string name="edit_account">Edit account</string>
    <string name="outgoing_server_hint">proto://user@server.com:port</string>
    <string name="incoming_server_hint">smtp://user@server.com:port</string>
    <string name="email_hint">user@domain.com</string>
    <string name="display_name_hint">First Last</string>
    <string name="action_accept">Accept</string>
    <string name="outgoing_server_password">Outgoing server password</string>
    <string name="start_new_conversation">Start a new conversation...</string>
    <string name="try_autoconfigure">Try to autoconfigure settings</string>
    <string name="email_password">Password</string>
    <string name="your_name">Your name</string>
    <string name="your_email">Your email address</string>
    <string name="your_email_password">Your email password</string>
    <string name="welcome">Welcome to Carteggio</string>
    <string name="welcome_explanation">To start using carteggio you need to configure your email account. Carteggio uses your current email account to send and receive messages.</string>
    <string name="save">Save</string>
    <string name="title_setup">Setup Carteggio</string>
    <string name="message_autoconfig_failed">Autoconfiguration failed. Please configure manually the mailbox settings.</string>
    <string name="label_incoming_description">proto is either imap (for standard imap), imap+ssl+ (for imap over ssl) or imap+tls (for imap with STARTTLS).</string>
    <string name="label_outgoing_description">proto can be either smtp (for plain smtp), smtp+tls+ (for STARTTLS with SMTP) or smtp+ssl+ (for SMTP over TLS)</string>    
    <string name="hint_password">Password</string>
    <string name="notification_text_new_messages">Unread carteggio messages</string>
    <plurals name="notification_new_incoming_messages">
        <item quantity="one">One unread message</item>
        <item quantity="other">%d unread messages</item>
    </plurals>
    
    <string name="label_state_no_errors">No errors detected</string>
    <string name="label_no_server">No server configured</string>
    <string name="label_outgoing">Outgoing Messages</string>
    <string name="label_incoming_messages">Incoming messages</string>
    <string name="password_use">Your password will be stored on your phone and used only to access your email server. Carteggio doesn\'t transmit the password to any other server.</string>

    <string name="error_contact_not_found">Cannot find the contact, please try again.</string>
    
    <string name="error_email_address_invalid">The email address of the contact is invalid.</string>
    
    <string name="button_disagree">Disagree</string>
    
    <string name="button_agree">Agree</string>
    
    <string name="troubleshooting">Troubleshooting</string>
    
    <string name="button_edit_settings">Edit settings</string>
    
    <string name="report_problems_to_developers">Report problem to developers</string>
    
    <string name="get_support">Get support</string>
    
    <string name="conversation_topic">Topic</string>
    
    <string name="conversation_topic_hint">Type the topic of the group</string>
    
    <string name="conversation_participants">Participants</string>

    <string name="title_edit_conversation">Edit conversation</string>
    
    
</resources>
