<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_new_conversation"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_add_person"        
        android:showAsAction="always"
        android:title="@string/action_new_conversation"/>
    
    <item
        android:id="@+id/action_new_group"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_add_group"        
        android:showAsAction="always"
        android:title="@string/action_new_group"/>
    
    <item
        android:id="@+id/action_add_contact"
        android:orderInCategory="100" 
        android:showAsAction="never"
        android:title="@string/action_add_contact"/>
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100" 
        android:showAsAction="never"
        android:title="@string/action_settings"/>

    <item
        android:id="@+id/action_network_status"
        android:orderInCategory="100" 
        android:showAsAction="never"
        android:title="@string/action_network_status"/>
    
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100" 
        android:showAsAction="never"
        android:title="@string/action_about"/>

    <item
        android:id="@+id/action_report_bug"
        android:orderInCategory="100" 
        android:showAsAction="never"
        android:title="@string/action_report_problem"/>
    
</menu>
