<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".EditAccountActivity" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dip"
            android:layout_marginLeft="24dip"
            android:layout_marginRight="24dip"
            android:layout_marginTop="24dip"
            android:text="@string/email_address"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/account_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dip"
            android:layout_marginLeft="24dip"
            android:layout_marginRight="24dip"
            android:layout_marginTop="8dip"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dip"
            android:layout_marginLeft="24dip"
            android:layout_marginRight="24dip"
            android:layout_marginTop="16dip"
            android:text="@string/display_name"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/account_display_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dip"
            android:layout_marginLeft="24dip"
            android:layout_marginRight="24dip"
            android:layout_marginTop="8dip"
            android:ems="10"
            android:hint="@string/display_name_hint"
            android:inputType="textCapWords|textNoSuggestions" >

            <requestFocus />
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dip"
            android:layout_marginLeft="24dip"
            android:layout_marginRight="24dip"
            android:layout_marginTop="16dip"
            android:text="@string/incoming_server"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/account_incoming"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dip"
            android:layout_marginLeft="24dip"
            android:layout_marginRight="24dip"
            android:layout_marginTop="8dip"
            android:ems="10"
            android:hint="@string/outgoing_server_hint"
            android:inputType="textUri" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dip"
            android:layout_marginLeft="24dip"
            android:layout_marginRight="24dip"
            android:layout_marginTop="8dip"
            android:text="@string/label_incoming_description"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        
        
        <EditText
            android:id="@+id/account_incoming_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dip"
            android:layout_marginLeft="24dip"
            android:layout_marginRight="24dip"
            android:layout_marginTop="8dip"
            android:ems="10"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dip"
            android:layout_marginLeft="24dip"
            android:layout_marginRight="24dip"
            android:textStyle="bold"
            android:layout_marginTop="16dip"
            android:text="@string/outgoing_server"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/account_outgoing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dip"
            android:layout_marginLeft="24dip"
            android:layout_marginRight="24dip"
            android:layout_marginTop="8dip"
            android:ems="10"
            android:hint="@string/incoming_server_hint"
            android:inputType="textUri" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dip"
            android:layout_marginLeft="24dip"
            android:layout_marginRight="24dip"
            android:layout_marginTop="8dip"
            android:text="@string/label_outgoing_description"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/account_outgoing_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dip"
            android:layout_marginLeft="24dip"
            android:layout_marginRight="24dip"
            android:layout_marginTop="8dip"
            android:ems="10"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />
    </LinearLayout>

</ScrollView>